Fix: updated top cars section, spacing in carousel, and see more animation

--- a/css/navbar.css
+++ b/css/navbar.css
@@ -1,11 +1,11 @@
 /* ---------------------- NAVBAR ---------------------- */
 .container_nav .navbar {
     display: flex;
-    justify-content: space-between;
+    justify-content: space-around;
     align-items: center;
-    width: 80%;
+    width: 100vw;
     padding: 25px 0% 15px;
-    margin: 0 10%;
+    margin: auto;
     z-index: 999;
     position: fixed;
     top: 0;
@@ -23,7 +23,6 @@
     margin-right: 2em;
     text-decoration: none;
     color: #212832;
-    position: relative;
     font-weight: 500;
     position: relative;
 }
@@ -35,15 +34,19 @@
     content: "";
     left: 0;
     bottom: -2px;
-    width: 0%;
+    width: 0;
     height: 2px;
     background-color: #212832;
     transition: width 0.3s ease;
 }
+
 .container_nav .navbar .links a:hover::after,
+.container_nav .navbar .links a.active::after,
 .container_nav .navbar .btns a.login:hover::after,
-.mobile-menu-content a:hover::after
-{width: 100%;}
+.mobile-menu-content a:hover::after,
+.mobile-menu-content a.active::after{
+    width: 100%;
+}
 .mobile-menu-content .mobile-btns a.signup:hover::after{width: 0;}
 
 .container_nav .navbar .btns {
@@ -217,6 +220,8 @@
         background-color: transparent;
         backdrop-filter: blur(0);
         box-shadow: none;
+        justify-content: space-between;
+        padding: 25px 5% 15px;
     }
     .container_nav .navbar .links,
     .container_nav .navbar .btns {
